test/fail/migration-more.mo
actor [ func(n:Nat) : Int {n} ] // reject - expect function on records
{

};
